--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1031,13 +1031,6 @@ body.bHome #contentwrap {
 	.mobileonly, .launch-button.mobileonly {
 	  display: block;
 	}
-	section>div.in {
-	  max-width: @max-width-phone;
-	}
-	footer>div.in {
-	  max-width: @max-width-phone;
-	}
-
 
 	section#createandsharevr {
 	  div.in img {
@@ -1286,7 +1279,7 @@ body.bHome.layoutTablet #contentwrap {
 
   section>div.in, #featuredVR>div, #featuredVR>h2, header>nav {
 	  width: 705px;
-	  max-width: 98%;
+	  max-width: 99%;
   }
 
   section#getstarted {
